# TDD_Store_Api

./: .pre-commit-config.yaml  Makefile  docker-compose.yml  pyproject.toml
src/: main.py  routers.py
src/controllers/: product.py
src/core/: config.py
src/db/: mongo.py
src/models/: product.py
src/schemas/: base.py  product.py
src/usecases/: product.py
tests/: conftest.py  factorys.py
tests/controllers/: test_product.py
tests/schemas/: test_product.py
tests/usecases/: test_product.py
