[tool.poetry]
name = "TDD Project"
version = "0.0.1"
description = ""
authors = ["ZombZombs <henriquerocca@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12.4"
fastapi = "^0.104.1"
uvicorn = "^0.30.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
motor = "^3.5.1"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.7"
pre-commit = "^3.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
